# pptxcli

./: .gitignore  AGENTS.md  IDEA.md  README.md  pptxcli  pyproject.toml
docs/: container-format.md  session-lifecycle.md  tech-selection.md
examples/: demo-form.json
src/pptx_cli/: cli.py  container_layout.py  inspect.py  models.py  session.py  session_server.py  show.py  template_ops.py
src/pptx_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tasks/: 001-项目初始化与技术选型.md  002-PPT结构解析与中间模型.md  003-模板候选检测与视觉标注.md  004-会话化服务与状态管理.md  004-模板确认与manifest生成.md  005-模板填充与幻灯片生成.md  005-模板确认与manifest生成.md  006-局部修改与预览能力.md  006-模板填充与幻灯片生成.md  007-Agent交互协议与稳健性.md  007-Container布局与嵌套排版.md  007-SVG绘图与矢量插入.md  007-局部修改与预览能力.md  008-Agent交互协议与稳健性.md  008-TextBox语义样式与结构化文本组件.md  008-局部修改与预览能力.md  009-Agent交互协议与稳健性.md  009-SVG绘图与矢量插入.md  010-局部修改与预览能力.md  011-Agent交互协议与稳健性.md
tests/: test_cli.py  test_show.py  test_template.py
