[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx_cli"
version = "0.1.0"
description = "Agent-friendly CLI for PPT template extraction, filling, and preview"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "XuHQ1997" }]
dependencies = []

[dependency-groups]
dev = []

[project.scripts]
pptxcli = "pptx_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
